# sphinx-getthecode

./: .bzrignore  .gitignore  README.rst  setup.cfg  setup.py  upload-to-pypi
anaconda/: meta.yaml
sphinxcontrib/: __init__.py  getthecode.py
static/: getthecode.css  getthecode.js
tasks/: __init__.py  anaconda.py  clean.py  git.py  release.py
