# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = sphinxcontrib-getthecode
version = 1.3
url = https://github.com/FabriceSalvaire/sphinx-getthecode
download_url = http://pypi.python.org/pypi/sphinxcontrib-getthecode
project_urls =
    Documentation = https://github.com/FabriceSalvaire/sphinx-getthecode
    Code = https://github.com/FabriceSalvaire/sphinx-getthecode
    Issue Tracker = https://github.com/FabriceSalvaire/sphinx-getthecode/issues
license = GPLv3
# license_file =
license_files = LICENSE.txt
author = Fabrice SALVAIRE
author_email = fabrice.salvaire@orange.fr
maintainer = Fabrice SALVAIRE
maintainer_email = fabrice.salvaire@orange.fr
description = Sphinx getthecode extension
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = sphinx, extension, literalinclude
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Documentation
    Topic :: Software Development :: Documentation
    Topic :: Utilities
platforms = any
# provides =
# requires =
# obsoletes =

[options]
namespace_packages = sphinxcontrib
packages = find:
scripts =
python_requires = >=3
setup_require = setuptools
# install_requires should declare the loosest possible dependency versions that are still workable
# https://packaging.python.org/discussions/install-requires-vs-requirements/
install_requires =
    Sphinx >=3
    jinja2
zip_safe = False
# Look in MANIFEST.in
include_package_data = False

[options.packages.find]
exclude =
    tasks
    unit-test

[options.package_data]

[bdist_wheel]
universal = 1
